EVOL - WS 'Article filtered by dates' - Ugly WS removed and replaced by getArticles with optional dates as params

--- a/package.json
+++ b/package.json
@@ -63,5 +63,9 @@
   },
   "scripts": {
     "test": "gulp test"
+  },
+  "dependencies": {
+    "node-uuid": "^1.4.8",
+    "progress": "^2.0.0"
   }
 }
